fix: feat some custom cursor and scrollbar caveats

--- a/src/style.css
+++ b/src/style.css
@@ -189,3 +189,7 @@ h6 {
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
+
+.no-overflow {
+  overflow: hidden;
+}
